# fineftpvfs

./: CMakeLists.txt  README.md
cmake/: Findasio.cmake
example/: CMakeLists.txt
example/src/: main.cpp
example/src/plugins/: gcfilesystem.cpp  gcfilesystem.h  gcfselement.cpp  gcfselement.h  utils.cpp  vfsfileinfo.h  vfsfileintf.h
fineftp-server/: CMakeLists.txt
fineftp-server/include/fineftp/: fileinfo.h  fileiointerface.h
fineftp-server/src/: fileinfo.cpp  fileiointerface.cpp  filesystem.cpp  filesystem.h  ftp_session.cpp  ftp_session.h
vfsftp/: CMakeLists.txt
vfsftp/src/: config.cpp  config.h  main.cpp
vfsftp/src/plugins/: gcfselement.cpp  gcfselement.h  utils.h
